[gd_scene load_steps=29 format=3 uid="uid://ul0krf1vltwb"]

[ext_resource type="Script" path="res://scenes/entities/player/player.gd" id="1_3iw55"]
[ext_resource type="Texture2D" uid="uid://bw6iaxhfblh3" path="res://assets/player/ship.png" id="2_b4nb8"]
[ext_resource type="Texture2D" uid="uid://o0rnoarmmj4t" path="res://assets/enemies/explosion.png" id="3_tuk1w"]
[ext_resource type="PackedScene" uid="uid://ynjuupqf2i4x" path="res://scenes/entities/player/shield.tscn" id="5_5uq7a"]
[ext_resource type="PackedScene" uid="uid://cr72y7mattyj1" path="res://scenes/entities/player/player_gun.tscn" id="5_wfx40"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y4fk0"]
atlas = ExtResource("3_tuk1w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_up3fn"]
atlas = ExtResource("3_tuk1w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e725u"]
atlas = ExtResource("3_tuk1w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_17t6d"]
atlas = ExtResource("3_tuk1w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_juq7i"]
atlas = ExtResource("3_tuk1w")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvx18"]
atlas = ExtResource("2_b4nb8")
region = Rect2(0, 32, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3io4"]
atlas = ExtResource("2_b4nb8")
region = Rect2(24, 32, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckhas"]
atlas = ExtResource("2_b4nb8")
region = Rect2(0, 64, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtfje"]
atlas = ExtResource("2_b4nb8")
region = Rect2(24, 64, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wf7d"]
atlas = ExtResource("2_b4nb8")
region = Rect2(0, 48, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mgo1"]
atlas = ExtResource("2_b4nb8")
region = Rect2(24, 48, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bju3h"]
atlas = ExtResource("2_b4nb8")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uww2"]
atlas = ExtResource("2_b4nb8")
region = Rect2(24, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_plfnh"]
atlas = ExtResource("2_b4nb8")
region = Rect2(0, 16, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxh2c"]
atlas = ExtResource("2_b4nb8")
region = Rect2(24, 16, 24, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_b7u4d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4fk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_up3fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e725u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17t6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juq7i")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvx18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3io4")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckhas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtfje")
}],
"loop": true,
"name": &"moving_down_fast",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wf7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mgo1")
}],
"loop": true,
"name": &"moving_down_slow",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bju3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uww2")
}],
"loop": true,
"name": &"moving_up_fast",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_plfnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxh2c")
}],
"loop": true,
"name": &"moving_up_slow",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_37e5u"]
radius = 15.0
height = 36.0

[sub_resource type="AtlasTexture" id="AtlasTexture_eqike"]
atlas = ExtResource("3_tuk1w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iglfs"]
atlas = ExtResource("3_tuk1w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs2kt"]
atlas = ExtResource("3_tuk1w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4eeq"]
atlas = ExtResource("3_tuk1w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3qck"]
atlas = ExtResource("3_tuk1w")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_knuqf"]
animations = [{
"frames": [],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqike")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iglfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs2kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4eeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3qck")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}]

[node name="Player" type="Area2D"]
collision_layer = 2
collision_mask = 228
script = ExtResource("1_3iw55")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_b7u4d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_37e5u")

[node name="PlayerGun" parent="." instance=ExtResource("5_wfx40")]

[node name="Invulnerability" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_knuqf")
autoplay = "default"

[node name="InvulnerabilityTimer" type="Timer" parent="Invulnerability"]

[node name="InvulnerabilityFlash" type="Timer" parent="Invulnerability"]
wait_time = 0.25

[node name="Shield" parent="." instance=ExtResource("5_5uq7a")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="Invulnerability" to="." method="_on_invulnerability_animation_finished"]
[connection signal="timeout" from="Invulnerability/InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
[connection signal="timeout" from="Invulnerability/InvulnerabilityFlash" to="." method="_on_invulnerability_flash_timeout"]
